--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.6",
+    "@apollo/datasource-rest": "^6.2.1",
+    "@apollo/server": "^4.9.4",
+    "apollo-link-rest": "^0.9.0",
+    "cross-fetch": "^4.0.0",
+    "encoding": "^0.1.13",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "json-loader": "^0.5.7",
+    "next": "^13.5.4",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-plotly.js": "^2.6.2",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.5",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "typescript": "^5"
+  },
+  "browser": {
+    "image-size": false
   }
 }
